src/objects/CT_File__c.object
<CustomObject>
    <fields>
        <fullName>Attribution__c</fullName>
        <label>Attribution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CT_Id__c</fullName>
        <externalId>true</externalId>
        <label>CT Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CT_Post__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post</label>
        <referenceTo>CT_Post__c</referenceTo>
        <relationshipLabel>CT Files</relationshipLabel>
        <relationshipName>CT_Files</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_to_File__c</fullName>
        <formula>HYPERLINK(Path__c, &quot;Link to File&quot;, &quot;_blank&quot;)</formula>
        <label>Link to File</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <referenceTo>Milestone__c</referenceTo>
        <relationshipLabel>CT Files</relationshipLabel>
        <relationshipName>CT_Files</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RARE_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RARE Campaign</label>
        <referenceTo>RARE_Campaign__c</referenceTo>
        <relationshipLabel>CT Files</relationshipLabel>
        <relationshipName>CT_Files</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>S3_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>S3 File?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>CT File</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Link_to_File__c</columns>
        <columns>Type__c</columns>
        <columns>RARE_Campaign__c</columns>
        <columns>S3_File__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>CT File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CT Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>